#241 #219 - map-issues change toolbar background on mobile

--- a/NMWeb/src/app/core/header/header.component.scss
+++ b/NMWeb/src/app/core/header/header.component.scss
@@ -67,6 +67,7 @@ mat-toolbar {
 @media only screen and (max-width: 600px) {
   .mat-toolbar {
     height: $toolbar-height-mobile;
+    background: black;
   }
 
 
